k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
  labels:
    app: ecommerce-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ecommerce-backend
